<resources>
    <string name="app_name" translatable="false">What you want</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">
        android.support.design.widget.AppBarLayout$ScrollingViewBehavior
    </string>


    <!-- MAIN ACTIVITY -->

    <string name="events">Events</string>
    <string name="favs">Favourite Events</string>
    <string name="my_events">My Events</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="others">Others</string>
    <string name="close_session">Close Session</string>
    <string name="user">User</string>
    <string name="free">FREE</string>
    <string name="not_free" translatable="false">NOT FREE</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <!-- MENU -->
    <string name="search_menu">Search</string>
    <string name="filter_menu">Filter</string>

    <!-- EVENT DETAIL -->
    <string name="start_date">START DATE:</string>
    <string name="finish_date">FINISH DATE:</string>
    <string name="location">LOCATION:</string>
    <string name="address">ADDRESS:</string>
    <string name="view_map">View Map</string>
    <string name="buy_tickets">BUY TICKETS</string>


    <!-- LOGIN -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="username_fail">Username is not correct</string>
    <string name="password_fail">Password is not correct</string>

    <string name="user_not_exists">The user not exists</string>

    <string name="register">Don\'t have an account? Sign up.</string>

    <string name="name_hint">Name</string>
    <string name="last_hint">Last name</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Sign in.</string>

    <string name="culture">Culture</string>
    <string name="community">Community</string>
    <string name="arts">Arts</string>
    <string name="science">Science and Tech</string>
    <string name="film">Film and Media</string>

    <string name="free_time">Free Time</string>
    <string name="music">Music</string>
    <string name="food">Food and Drink</string>
    <string name="hobbies" translatable="false">Hobbies</string>

    <string name="travel">Travel</string>
    <string name="holiday">Holiday</string>
    <string name="travel_outdoor">Travel and Outdoor</string>
    <string name="auto">Auto, Boat and Air</string>

    <string name="health">Health</string>
    <string name="sports">Sports and Fitness</string>
    <string name="home">Home and Lifestyle</string>
    <string name="fashion" translatable="false">Fashion</string>

    <string name="education">Education</string>
    <string name="family">Family and Education</string>
    <string name="school">School Activities</string>

    <string name="spirit">Spirituality</string>
    <string name="charity">Charity and Causes</string>

    <string name="other">Other</string>
    <string name="business">Business</string>
    <string name="government">Government</string>

    <!-- ABOUT -->
    <string name="name">Name:</string>
    <string name="info">App Info</string>
    <string name="version" translatable="false">Version:</string>
    <string name="version_num" translatable="false">1.0</string>

    <string name="authors">Authors</string>
    <string name="alvaro" translatable="false">Álvaro Lopez Oró</string>
    <string name="marc" translatable="false">Marc García Fernández</string>
    <string name="samu" translatable="false">Samuel Calvo Ballestero</string>

    <string name="eventBrite">Data provided by EventBrite</string>
    <string name="title_activity_settings">Settings</string>

    <string name="auto_lang">Automatic Language</string>
    <string name="lang">Language</string>
    <string name="security">Security</string>
    <string name="pass_change">Change Password</string>
    <string name="old_p">Old Password</string>
    <string name="new_p">New Password</string>
    <string name="confirm_p">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
