<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/events" />

        <item
                android:id="@+id/nav_favs"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/favs" />

        <item
                android:id="@+id/nav_my_events"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/my_events" />

    </group>


    <item
            android:id="@+id/nav_menu_2"
            android:title="@string/others">

        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_launcher_background"
                        android:title="@string/settings" />

                <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_launcher_background"
                        android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>