<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/appBarLayout2">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/tb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </android.support.design.widget.AppBarLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
                android:text="@string/security"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bPass" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" tools:text="Change Password"
                style="@style/Widget.AppCompat.Button.Borderless" android:textAlignment="textStart"
                android:textAllCaps="false" android:text="@string/pass_change"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bLang" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                style="@style/Widget.AppCompat.Button.Borderless" android:textAlignment="textStart"
                android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:text="@string/auto_lang"/>
        <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/bPass" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/bLang"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/divider4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" tools:text="Language" android:text="@string/lang"/>
    </android.support.constraint.ConstraintLayout>
</layout>