<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity" android:background="@mipmap/backgorund">

    <android.support.design.widget.FloatingActionButton
            app:layout_anchor="@+id/fabAnchor"
            app:fabSize="normal"
            app:layout_anchorGravity="right|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_star_checked"
            tools:layout_editor_absoluteY="16dp"
            android:id="@+id/bRegister" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
    <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
            app:cardBackgroundColor="@android:color/white" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
                    android:text="@string/login" android:textAppearance="@android:style/TextAppearance.Material.Large"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:id="@+id/textInputLayout2" android:hint="@string/username">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etUsername"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:hint="@string/password" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/textInputLayout3">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/etPassword" android:layout_weight="1" android:ems="10"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bLogin" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fabAnchor" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>